--- a/src/styles/css/index.css
+++ b/src/styles/css/index.css
@@ -1,7 +1,11 @@
 .App {
   text-align: center;
   height: 100vh;
-  width: 100vw; }
+  width: 100vw;
+  display: flex;
+  flex-flow: row nowrap; }
+  .App .sidebar {
+    width: 25%; }
 
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
