--- a/src/styles/scss/App.scss
+++ b/src/styles/scss/App.scss
@@ -2,6 +2,11 @@
   text-align: center;
   height: 100vh;
   width: 100vw;
+  display: flex;
+  flex-flow: row nowrap;
+  .sidebar {
+    width: 25%;
+  }
 }
 
 .App-logo {
