Add input for search

--- a/src/styles/scss/App.scss
+++ b/src/styles/scss/App.scss
@@ -4,14 +4,6 @@
   width: 100vw;
   display: flex;
   flex-flow: row nowrap;
-  .sidebar {
-    width: 25%;
-  }
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
 }
 
 .App-header {
@@ -26,7 +18,7 @@
 }
 
 .App-link {
-  color: #61dafb;
+  color: #e96d3c;
 }
 
 @keyframes App-logo-spin {
