--- a/src/styles/css/App.css
+++ b/src/styles/css/App.css
@@ -4,12 +4,6 @@
   width: 100vw;
   display: flex;
   flex-flow: row nowrap; }
-  .App .sidebar {
-    width: 25%; }
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin; }
 
 .App-header {
   background-color: #282c34;
@@ -22,7 +16,7 @@
   color: white; }
 
 .App-link {
-  color: #61dafb; }
+  color: #e96d3c; }
 
 @keyframes App-logo-spin {
   from {
