--- a/src/styles/css/index.css
+++ b/src/styles/css/index.css
@@ -4,12 +4,6 @@
   width: 100vw;
   display: flex;
   flex-flow: row nowrap; }
-  .App .sidebar {
-    width: 25%; }
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin; }
 
 .App-header {
   background-color: #282c34;
@@ -22,7 +16,7 @@
   color: white; }
 
 .App-link {
-  color: #61dafb; }
+  color: #e96d3c; }
 
 @keyframes App-logo-spin {
   from {
@@ -41,3 +35,14 @@ body {
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace; }
+
+.sidebar {
+  width: 25%; }
+  .sidebar #search {
+    width: 80%;
+    height: 1.9rem;
+    font-size: 1.2rem;
+    padding: 10px;
+    margin: 5%;
+    border: 1px solid #282c34;
+    border-radius: 20%; }
