--- a/src/styles/css/index.css
+++ b/src/styles/css/index.css
@@ -45,4 +45,5 @@ code {
     padding: 10px;
     margin: 5%;
     border: 1px solid #282c34;
-    border-radius: 20%; }
+    border-radius: 20%;
+    background: #f1bd8c; }
