Add variables to SCSS and style to li

--- a/src/styles/scss/index.scss
+++ b/src/styles/scss/index.scss
@@ -1,3 +1,6 @@
+/* Variables go first or else they won't render */
+
+@import 'variables';
 @import 'App';
 @import 'base';
-@import 'sidebar'
+@import 'sidebar';
