--- a/src/styles/css/index.css
+++ b/src/styles/css/index.css
@@ -1,3 +1,5 @@
+/* Variables go first or else they won't render */
+/* Variables */
 .App {
   text-align: center;
   height: 100vh;
@@ -26,7 +28,7 @@
 
 /* This is for all the base or body styles */
 body {
-  background: red;
+  background: #ff0000;
   margin: 0;
   padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
@@ -44,6 +46,13 @@ code {
     font-size: 1.2rem;
     padding: 10px;
     margin: 5%;
-    border: 1px solid #282c34;
+    border: 1px solid #333;
     border-radius: 20%;
     background: #f1bd8c; }
+  .sidebar .listing {
+    margin: 3% 10% 0 0;
+    padding: 1%;
+    list-style: none;
+    font-size: 1rem;
+    border: 1px solid #333;
+    box-shadow: 1px 2px 1px #333; }
