--- a/src/styles/scss/_base.scss
+++ b/src/styles/scss/_base.scss
@@ -1,6 +1,6 @@
 /* This is for all the base or body styles */
 body {
-    background: red;
+    background: $primary-color;
     margin: 0;
     padding: 0;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
