--- a/src/styles/scss/_sidebar.scss
+++ b/src/styles/scss/_sidebar.scss
@@ -6,8 +6,17 @@
       font-size: 1.2rem;
       padding: 10px;
       margin: 5%;
-      border: 1px solid #282c34;
+      border: 1px solid $border-color;
       border-radius: 20%;
-      background: #f1bd8c;
+      background: $secondary-color;
+    }
+
+    .listing {
+      margin: 3% 10% 0 0;
+      padding: 1%;
+      list-style: none;
+      font-size: 1rem;
+      border: 1px solid $border-color;
+      box-shadow: 1px 2px 1px $border-color;
     }
   }
