--- a/src/styles/scss/_variables.scss
+++ b/src/styles/scss/_variables.scss
@@ -1,7 +1,11 @@
 /* Variables */
 
-$primary-color: #ff0000;
+$primary-color: #fcf9c2;
 
-$secondary-color: #f1bd8c;
+$secondary-color: #3c0b04;
 
-$border-color: #333;
+$font-color:#8e340b 
+
+$border-color: #0c0404;
+
+//#4d1104
