--- a/src/styles/css/index.css
+++ b/src/styles/css/index.css
@@ -31,12 +31,7 @@ body {
   background: #fcf9c2;
   margin: 0;
   padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale; }
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace; }
+  font-family: sans-serif; }
 
 .sidebar {
   width: 25%; }
@@ -48,11 +43,15 @@ code {
     margin: 5%;
     border: 1px solid #0c0404;
     border-radius: 20%;
-    background: #3c0b04; }
-  .sidebar .listing {
-    margin: 3% 10% 0 0;
-    padding: 1%;
-    list-style: none;
-    font-size: 1rem;
-    border: 1px solid #0c0404;
-    box-shadow: 1px 2px 1px #0c0404; }
+    background: #3c0b04;
+    color: #ffffff; }
+  .sidebar .volcanoes {
+    width: 90%; }
+    .sidebar .volcanoes .listing {
+      align-content: center;
+      margin: 7% 15% 0 0;
+      padding: 1%;
+      list-style: none;
+      font-size: 1rem;
+      border: 1px solid #0c0404;
+      box-shadow: 1px 2px 1px #0c0404; }
