--- a/src/styles/scss/_variables.scss
+++ b/src/styles/scss/_variables.scss
@@ -1,11 +1,9 @@
 /* Variables */
 
-$primary-color: #fcf9c2;
+$primary-color: #4d1104;
 
 $secondary-color: #3c0b04;
 
-$font-color: #ffffff;
+$font-color: #fcf9c2;
 
 $border-color: #0c0404;
-
-//#4d1104
