--- a/src/styles/scss/_sidebar.scss
+++ b/src/styles/scss/_sidebar.scss
@@ -1,28 +1,34 @@
 .sidebar {
     width: 25%;
+    color: $font-color;
+    background: $primary-color;
+
     #search {
       width: 80%;
       height: 1.9rem;
       font-size: 1.2rem;
       padding: 10px;
       margin: 5%;
-      border: 1px solid $border-color;
-      border-radius: 20%;
+      border-radius: 5px;
       background: $secondary-color;
       color: $font-color;
+      border: 1px solid $border-color;
+      box-shadow: 1px 2px 1px $border-color;
     }
 
     .volcanoes {
-      width: 90%;
+      width: 85%;
 
       .listing {
+        background: $secondary-color; 
         align-content: center;
-        margin: 7% 15% 0 0;
+        margin: 7% 20% 0 0;
         padding: 1%;
         list-style: none;
         font-size: 1rem;
         border: 1px solid $border-color;
         box-shadow: 1px 2px 1px $border-color;
+        cursor: pointer;
       }
     }
   }
