--- a/src/styles/css/index.css
+++ b/src/styles/css/index.css
@@ -7,31 +7,19 @@
   display: flex;
   flex-flow: row nowrap; }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.gm-style .gm-style-iw {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white; }
-
-.App-link {
-  color: #e96d3c; }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg); }
-  to {
-    transform: rotate(360deg); } }
-
-/* This is for all the base or body styles */
-body {
-  background: #4d1104;
-  margin: 0;
-  padding: 0;
-  font-family: sans-serif; }
+  justify-content: space-between;
+  width: 100%;
+  color: #fcf9c2;
+  background: #3c0b04;
+  align-content: center;
+  margin: 7% 20% 0 0;
+  padding: 1%;
+  font-size: 1rem;
+  border: 1px solid #0c0404;
+  box-shadow: 1px 2px 1px #0c0404;
+  cursor: pointer; }
 
 .sidebar {
   width: 25%;
@@ -64,3 +52,10 @@ body {
       cursor: pointer; }
       .sidebar .volcanoes .listing img {
         align-self: center; }
+
+/* This is for all the base or body styles */
+body {
+  background: #4d1104;
+  margin: 0;
+  padding: 0;
+  font-family: sans-serif; }
