--- a/src/styles/scss/index.scss
+++ b/src/styles/scss/index.scss
@@ -1,6 +1,7 @@
 /* Variables go first or else they won't render */
 
-@import 'variables';
-@import 'App';
-@import 'base';
-@import 'sidebar';
+@import "variables";
+@import "App";
+@import "base";
+@import "sidebar";
+@import "popup";
