--- a/src/styles/css/App.css
+++ b/src/styles/css/App.css
@@ -4,3 +4,12 @@
   width: 100vw;
   display: flex;
   flex-flow: row nowrap; }
+
+header {
+  font-size: 1.2rem;
+  padding: 2% 2% 0; }
+
+@media only screen and (max-width: 600px) {
+  header {
+    font-size: .8rem;
+    padding: 5%; } }
