--- a/src/styles/scss/App.scss
+++ b/src/styles/scss/App.scss
@@ -5,3 +5,16 @@
   display: flex;
   flex-flow: row nowrap;
 }
+
+header {
+  font-size: 1.2rem;
+  padding: 2% 2% 0;
+  
+}
+
+@media only screen and (max-width: 600px) {
+  header {
+    font-size: .8rem;
+    padding: 5%;
+  }
+}
