Change color contrast on popup

--- a/src/styles/css/index.css
+++ b/src/styles/css/index.css
@@ -77,11 +77,14 @@ body {
   display: flex;
   justify-content: center;
   width: 100%;
-  color: #fcf9c2;
-  background-color: #3c0b04;
+  color: #3c0b04;
+  background-color: #fcf9c2;
+  text-shadow: 0 1px 0.5px #3c0b04;
   align-content: center;
   padding: 1%;
-  font-weight: 600;
   border: 1px solid #0c0404;
   box-shadow: 1px 2px 1px #0c0404;
   cursor: pointer; }
+  .gm-style-iw img {
+    border: 1px solid #0c0404;
+    box-shadow: 1px 2px 1px #0c0404; }
