--- a/src/styles/css/App.css
+++ b/src/styles/css/App.css
@@ -11,5 +11,5 @@ header {
 
 @media only screen and (max-width: 600px) {
   header {
-    font-size: .8rem;
+    font-size: 0.8rem;
     padding: 5%; } }
